# PetraPanel.ai-2

./: .gitignore  .replit  VideosPage.tsx.backup  VideosPage.tsx.problematic  cookies.txt  create-reset-password.js  create-user.js  package-lock.json  package.json  pyproject.toml  replit.nix  sidebar_backup.txt  tailwind.config.ts  theme.json  tsconfig.json  vite.config.ts
attached_assets/: Pasted--corrections-files-thumbnail-originalUrl-api-videos-stream-thumbnail-1737126028052--1737128615837.txt  Pasted--header-class-border-b-flex-items-center-div-class-flex-1-border-b-md-border-b-0-div-class-fl-1737110163942.txt  Pasted--index-D31kGmnc-js-1259-Error-con-ruta-principal-vt-message-Request-failed-with-status-code-403-1743111765250.txt  Pasted--rest-express-1-0-0-dev-tsx-server-index-ts-Setting-up-authentication-Authentication-setu-1736945994092.txt  Pasted--src-components-auth-AuthForm-tsx-import-Auth-from-supabase-auth-ui-react-import-ThemeS-1736848717387.txt  Pasted--src-pages-Settings-tsx-import-Tabs-TabsContent-TabsList-TabsTrigger-from-components-ui-1736847569053.txt  Pasted--usr-bin-python3-Copyright-c-2021-LALAL-AI-Permission-is-hereby-granted-free-of-charge--1738322320556.txt  Pasted-Acciones-r-pidas-Nuevo-Video-Crear-y-subir-un-nuevo-video-Optimizar-SEO-Mejorar-el-posicionamiento--1741801287479.txt  Pasted-Aqu-tienes-un-resumen-de-lo-que-podr-a-hacer-cada-rol-los-estados-que-ver-a-en-la-pr-ctica-y-las--1737203833976.txt  Pasted-Audio-extraction-completed-uploads-1738320168571-785810525-audio-mp3-10-42-55-AM-express-POST-ap-1738320208750.txt  (+43 more)
client/: index.html
(+403 files in other folders)
