
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "librosa>=0.10.2.post1",
    "numpy<2.0.0",
    "scipy>=1.15.1",
    "soundfile>=0.13.1",
    "torch==2.1.0",
    "torchaudio==2.1.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
